# azami

./: .env  .rustfmt.toml  Cargo.toml  README.md  cert.pem  key.pem  launch.sh
migrations/2020-01-16-161207_create_users/: up.sql
migrations/2020-01-19-003153_create_posts/: up.sql
migrations/2020-01-24-034342_create_tags/: up.sql
migrations/2020-01-29-230143_create_post_tags/: down.sql  up.sql
src/: database.rs  errors.rs  main.rs  responders.rs  routes.rs  schema.rs  utils.rs
src/controllers/: auth_controller.rs  mod.rs  post_controller.rs  post_tag_controller.rs  tag_controller.rs  user_controller.rs
src/error_handlers/: mod.rs
src/middleware/: auth_middleware.rs  mod.rs
src/models/: mod.rs  post.rs  post_tag.rs  tag.rs  user.rs
