[package]
name = "azami"
version = "0.1.0"
authors = ["Justin Parado <justin.parado@dice205.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1.0.0"
actix-cors = "0.2.0"
actix-identity = "0.2.1"
actix-service = "1.0.2"
actix-web-actors = "2.0.0"

diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
serde = "1.0.104"
serde_json = "1.0.44"
dotenv = "0.15.0"
argonautica = "0.2.0"
futures = "0.3"
listenfd = "0.3"
openssl = "0.10.28"

[profile.dev]
debug=0
